Finally fixed top/bottom spacing issues with nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@
 }
 
 .mainContent {
-  flex: 1 1 auto;
-  padding-top: 50px;
-  padding-bottom: 150px;
+  flex-grow: 1;
+  overflow-y: auto;
+  /* flex: 1 1 auto;
+  /* padding-top: 50px;
+  padding-bottom: 150px; */ 
 }
 
 body > #root > div {
